mlaskal/build.vc141/du3456g.output
Nonterminals useless in grammar

   constant
   unsigned_const


Terminals unused in grammar

   RECORD


Rules useless in grammar

  119 constant: unsigned_const
  120         | OPER_SIGNADD UINT
  121         | OPER_SIGNADD REAL

  122 unsigned_const: UINT
  123               | REAL
  124               | STRING
  125               | IDENTIFIER


Grammar

    0 $accept: mlaskal "end of file"

    1 mlaskal: PROGRAM IDENTIFIER SEMICOLON block_P DOT

    2 block_P: start_block const_block
    3        | const_block

    4 start_block: LABEL C1 SEMICOLON

    5 const_block: CONST C2 type_block
    6            | type_block

    7 type_block: TYPE C3 var_block
    8           | var_block

    9 var_block: VAR C5 procedure_block
   10          | procedure_block

   11 procedure_block: end_block
   12                | C7 end_block

   13 end_block: BEGIN state_cycle END

   14 C1: UINT
   15   | C1 COMMA UINT

   16 C2: IDENTIFIER EQ UINT SEMICOLON
   17   | IDENTIFIER EQ REAL SEMICOLON
   18   | IDENTIFIER EQ STRING SEMICOLON
   19   | IDENTIFIER EQ IDENTIFIER SEMICOLON
   20   | IDENTIFIER EQ OPER_SIGNADD UINT SEMICOLON
   21   | IDENTIFIER EQ OPER_SIGNADD REAL SEMICOLON
   22   | C2 IDENTIFIER EQ UINT SEMICOLON
   23   | C2 IDENTIFIER EQ REAL SEMICOLON
   24   | C2 IDENTIFIER EQ STRING SEMICOLON
   25   | C2 IDENTIFIER EQ IDENTIFIER SEMICOLON
   26   | C2 IDENTIFIER EQ OPER_SIGNADD UINT SEMICOLON
   27   | C2 IDENTIFIER EQ OPER_SIGNADD REAL SEMICOLON
   28   | IDENTIFIER EQ UINT

   29 C3: IDENTIFIER EQ type SEMICOLON
   30   | C3 IDENTIFIER EQ type SEMICOLON

   31 C4: IDENTIFIER
   32   | C4 COMMA IDENTIFIER

   33 C5: C4 COLON type SEMICOLON
   34   | C5 C4 COLON type SEMICOLON

   35 C7: procedure_header SEMICOLON block SEMICOLON
   36   | function_header SEMICOLON block SEMICOLON
   37   | C7 procedure_header SEMICOLON block SEMICOLON
   38   | C7 function_header SEMICOLON block SEMICOLON

   39 block: start_block const_block2
   40      | const_block2

   41 const_block2: CONST C2 type_block2
   42             | type_block2

   43 type_block2: TYPE C3 var_block2
   44            | var_block2

   45 var_block2: VAR C5 end_block
   46           | end_block

   47 procedure_header: PROCEDURE IDENTIFIER
   48                 | PROCEDURE IDENTIFIER LPAR form_par RPAR

   49 function_header: FUNCTION IDENTIFIER COLON IDENTIFIER
   50                | FUNCTION IDENTIFIER LPAR form_par RPAR COLON IDENTIFIER

   51 form_par: VAR id_cycl COLON IDENTIFIER
   52         | id_cycl COLON IDENTIFIER
   53         | form_par SEMICOLON VAR id_cycl COLON IDENTIFIER
   54         | form_par SEMICOLON id_cycl COLON IDENTIFIER

   55 id_cycl: IDENTIFIER
   56        | id_cycl COMMA IDENTIFIER

   57 type: ord_type
   58     | IDENTIFIER
   59     | struc_type

   60 struc_type: ARRAY LSBRA ord_type_cycl RSBRA OF type

   61 ord_type: ord_const DOTDOT ord_const

   62 ord_type_cycl: ord_type
   63              | ord_type_cycl COMMA ord_type

   64 statement: %empty
   65          | D0 variable ASSIGN expression
   66          | D0 IDENTIFIER
   67          | D0 IDENTIFIER LPAR real_par RPAR
   68          | D0 GOTO UINT
   69          | D0 BEGIN state_cycle END
   70          | D0 IF expression THEN statement
   71          | D0 IF expression THEN statement2 ELSE statement
   72          | D0 WHILE expression DO statement
   73          | D0 REPEAT state_cycle UNTIL expression
   74          | D0 FOR IDENTIFIER ASSIGN expression FOR_DIRECTION expression DO statement

   75 statement2: %empty
   76           | D0 variable ASSIGN expression
   77           | D0 IDENTIFIER
   78           | D0 IDENTIFIER LPAR real_par RPAR
   79           | D0 GOTO UINT
   80           | D0 BEGIN state_cycle END
   81           | D0 IF expression THEN statement2 ELSE statement2
   82           | D0 WHILE expression DO statement2
   83           | D0 REPEAT state_cycle UNTIL expression
   84           | D0 FOR IDENTIFIER ASSIGN expression FOR_DIRECTION expression DO statement2

   85 D0: UINT COLON
   86   | %empty

   87 state_cycle: statement
   88            | state_cycle SEMICOLON statement

   89 variable: variable LSBRA ord_expr_cylc RSBRA
   90         | IDENTIFIER

   91 variable_withoutID: variable LSBRA ord_expr_cylc RSBRA

   92 ord_expr_cylc: expression
   93              | ord_expr_cylc COMMA expression

   94 real_par: expression
   95         | real_par COMMA expression

   96 expression: simp_expression
   97           | simp_expression OPER_REL simp_expression
   98           | simp_expression EQ simp_expression

   99 simp_expression: OPER_SIGNADD term_oper
  100                | term_oper

  101 term_oper: term_oper OPER_SIGNADD term
  102          | term_oper OR term
  103          | term

  104 term: factor
  105     | term OPER_MUL factor

  106 factor: unsigned_const_withoutID
  107       | variable_withoutID
  108       | IDENTIFIER
  109       | IDENTIFIER LPAR real_par RPAR
  110       | LPAR expression RPAR
  111       | NOT factor

  112 ord_const: IDENTIFIER
  113          | OPER_SIGNADD IDENTIFIER
  114          | OPER_SIGNADD UINT
  115          | UINT

  116 unsigned_const_withoutID: REAL
  117                         | STRING
  118                         | UINT


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
PROGRAM (258) 1
LABEL (259) 4
CONST (260) 5 41
TYPE (261) 7 43
VAR (262) 9 45 51 53
BEGIN (263) 13 69 80
END (264) 13 69 80
PROCEDURE (265) 47 48
FUNCTION (266) 49 50
ARRAY (267) 60
OF (268) 60
GOTO (269) 68 79
IF (270) 70 71 81
THEN (271) 70 71 81
ELSE (272) 71 81
WHILE (273) 72 82
DO (274) 72 74 82 84
REPEAT (275) 73 83
UNTIL (276) 73 83
FOR (277) 74 84
OR (278) 102
NOT (279) 111
RECORD (280)
IDENTIFIER (281) 1 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
    32 47 48 49 50 51 52 53 54 55 56 58 66 67 74 77 78 84 90 108 109
    112 113
UINT (282) 14 15 16 20 22 26 28 68 79 85 114 115 118
REAL (283) 17 21 23 27 116
STRING (284) 18 24 117
SEMICOLON (285) 1 4 16 17 18 19 20 21 22 23 24 25 26 27 29 30 33 34
    35 36 37 38 53 54 88
DOT (286) 1
COMMA (287) 15 32 56 63 93 95
EQ (288) 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 98
COLON (289) 33 34 49 50 51 52 53 54 85
LPAR (290) 48 50 67 78 109 110
RPAR (291) 48 50 67 78 109 110
DOTDOT (292) 61
LSBRA (293) 60 89 91
RSBRA (294) 60 89 91
ASSIGN (295) 65 74 76 84
OPER_REL (296) 97
OPER_SIGNADD (297) 20 21 26 27 99 101 113 114
OPER_MUL (298) 105
FOR_DIRECTION (299) 74 84


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
mlaskal (46)
    on left: 1, on right: 0
block_P (47)
    on left: 2 3, on right: 1
start_block (48)
    on left: 4, on right: 2 39
const_block (49)
    on left: 5 6, on right: 2 3
type_block (50)
    on left: 7 8, on right: 5 6
var_block (51)
    on left: 9 10, on right: 7 8
procedure_block (52)
    on left: 11 12, on right: 9 10
end_block (53)
    on left: 13, on right: 11 12 45 46
C1 (54)
    on left: 14 15, on right: 4 15
C2 (55)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28, on right: 5 22
    23 24 25 26 27 41
C3 (56)
    on left: 29 30, on right: 7 30 43
C4 (57)
    on left: 31 32, on right: 32 33 34
C5 (58)
    on left: 33 34, on right: 9 34 45
C7 (59)
    on left: 35 36 37 38, on right: 12 37 38
block (60)
    on left: 39 40, on right: 35 36 37 38
const_block2 (61)
    on left: 41 42, on right: 39 40
type_block2 (62)
    on left: 43 44, on right: 41 42
var_block2 (63)
    on left: 45 46, on right: 43 44
procedure_header (64)
    on left: 47 48, on right: 35 37
function_header (65)
    on left: 49 50, on right: 36 38
form_par (66)
    on left: 51 52 53 54, on right: 48 50 53 54
id_cycl (67)
    on left: 55 56, on right: 51 52 53 54 56
type (68)
    on left: 57 58 59, on right: 29 30 33 34 60
struc_type (69)
    on left: 60, on right: 59
ord_type (70)
    on left: 61, on right: 57 62 63
ord_type_cycl (71)
    on left: 62 63, on right: 60 63
statement (72)
    on left: 64 65 66 67 68 69 70 71 72 73 74, on right: 70 71 72 74
    87 88
statement2 (73)
    on left: 75 76 77 78 79 80 81 82 83 84, on right: 71 81 82 84
D0 (74)
    on left: 85 86, on right: 65 66 67 68 69 70 71 72 73 74 76 77 78
    79 80 81 82 83 84
state_cycle (75)
    on left: 87 88, on right: 13 69 73 80 83 88
variable (76)
    on left: 89 90, on right: 65 76 89 91
variable_withoutID (77)
    on left: 91, on right: 107
ord_expr_cylc (78)
    on left: 92 93, on right: 89 91 93
real_par (79)
    on left: 94 95, on right: 67 78 95 109
expression (80)
    on left: 96 97 98, on right: 65 70 71 72 73 74 76 81 82 83 84 92
    93 94 95 110
simp_expression (81)
    on left: 99 100, on right: 96 97 98
term_oper (82)
    on left: 101 102 103, on right: 99 100 101 102
term (83)
    on left: 104 105, on right: 101 102 103 105
factor (84)
    on left: 106 107 108 109 110 111, on right: 104 105 111
ord_const (85)
    on left: 112 113 114 115, on right: 61
unsigned_const_withoutID (86)
    on left: 116 117 118, on right: 106


State 0

    0 $accept: . mlaskal "end of file"
    1 mlaskal: . PROGRAM IDENTIFIER SEMICOLON block_P DOT

    PROGRAM  shift, and go to state 1

    mlaskal  go to state 2


State 1

    1 mlaskal: PROGRAM . IDENTIFIER SEMICOLON block_P DOT

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: mlaskal . "end of file"

    "end of file"  shift, and go to state 4


State 3

    1 mlaskal: PROGRAM IDENTIFIER . SEMICOLON block_P DOT

    SEMICOLON  shift, and go to state 5


State 4

    0 $accept: mlaskal "end of file" .

    $default  accept


State 5

    1 mlaskal: PROGRAM IDENTIFIER SEMICOLON . block_P DOT
    2 block_P: . start_block const_block
    3        | . const_block
    4 start_block: . LABEL C1 SEMICOLON
    5 const_block: . CONST C2 type_block
    6            | . type_block
    7 type_block: . TYPE C3 var_block
    8           | . var_block
    9 var_block: . VAR C5 procedure_block
   10          | . procedure_block
   11 procedure_block: . end_block
   12                | . C7 end_block
   13 end_block: . BEGIN state_cycle END
   35 C7: . procedure_header SEMICOLON block SEMICOLON
   36   | . function_header SEMICOLON block SEMICOLON
   37   | . C7 procedure_header SEMICOLON block SEMICOLON
   38   | . C7 function_header SEMICOLON block SEMICOLON
   47 procedure_header: . PROCEDURE IDENTIFIER
   48                 | . PROCEDURE IDENTIFIER LPAR form_par RPAR
   49 function_header: . FUNCTION IDENTIFIER COLON IDENTIFIER
   50                | . FUNCTION IDENTIFIER LPAR form_par RPAR COLON IDENTIFIER

    LABEL      shift, and go to state 6
    CONST      shift, and go to state 7
    TYPE       shift, and go to state 8
    VAR        shift, and go to state 9
    BEGIN      shift, and go to state 10
    PROCEDURE  shift, and go to state 11
    FUNCTION   shift, and go to state 12

    block_P           go to state 13
    start_block       go to state 14
    const_block       go to state 15
    type_block        go to state 16
    var_block         go to state 17
    procedure_block   go to state 18
    end_block         go to state 19
    C7                go to state 20
    procedure_header  go to state 21
    function_header   go to state 22


State 6

    4 start_block: LABEL . C1 SEMICOLON
   14 C1: . UINT
   15   | . C1 COMMA UINT

    UINT  shift, and go to state 23

    C1  go to state 24


State 7

    5 const_block: CONST . C2 type_block
   16 C2: . IDENTIFIER EQ UINT SEMICOLON
   17   | . IDENTIFIER EQ REAL SEMICOLON
   18   | . IDENTIFIER EQ STRING SEMICOLON
   19   | . IDENTIFIER EQ IDENTIFIER SEMICOLON
   20   | . IDENTIFIER EQ OPER_SIGNADD UINT SEMICOLON
   21   | . IDENTIFIER EQ OPER_SIGNADD REAL SEMICOLON
   22   | . C2 IDENTIFIER EQ UINT SEMICOLON
   23   | . C2 IDENTIFIER EQ REAL SEMICOLON
   24   | . C2 IDENTIFIER EQ STRING SEMICOLON
   25   | . C2 IDENTIFIER EQ IDENTIFIER SEMICOLON
   26   | . C2 IDENTIFIER EQ OPER_SIGNADD UINT SEMICOLON
   27   | . C2 IDENTIFIER EQ OPER_SIGNADD REAL SEMICOLON
   28   | . IDENTIFIER EQ UINT

    IDENTIFIER  shift, and go to state 25

    C2  go to state 26


State 8

    7 type_block: TYPE . C3 var_block
   29 C3: . IDENTIFIER EQ type SEMICOLON
   30   | . C3 IDENTIFIER EQ type SEMICOLON

    IDENTIFIER  shift, and go to state 27

    C3  go to state 28


State 9

    9 var_block: VAR . C5 procedure_block
   31 C4: . IDENTIFIER
   32   | . C4 COMMA IDENTIFIER
   33 C5: . C4 COLON type SEMICOLON
   34   | . C5 C4 COLON type SEMICOLON

    IDENTIFIER  shift, and go to state 29

    C4  go to state 30
    C5  go to state 31


State 10

   13 end_block: BEGIN . state_cycle END
   64 statement: . %empty  [END, SEMICOLON]
   65          | . D0 variable ASSIGN expression
   66          | . D0 IDENTIFIER
   67          | . D0 IDENTIFIER LPAR real_par RPAR
   68          | . D0 GOTO UINT
   69          | . D0 BEGIN state_cycle END
   70          | . D0 IF expression THEN statement
   71          | . D0 IF expression THEN statement2 ELSE statement
   72          | . D0 WHILE expression DO statement
   73          | . D0 REPEAT state_cycle UNTIL expression
   74          | . D0 FOR IDENTIFIER ASSIGN expression FOR_DIRECTION expression DO statement
   85 D0: . UINT COLON
   86   | . %empty  [BEGIN, GOTO, IF, WHILE, REPEAT, FOR, IDENTIFIER]
   87 state_cycle: . statement
   88            | . state_cycle SEMICOLON statement

    UINT  shift, and go to state 32

    END        reduce using rule 64 (statement)
    SEMICOLON  reduce using rule 64 (statement)
    $default   reduce using rule 86 (D0)

    statement    go to state 33
    D0           go to state 34
    state_cycle  go to state 35


State 11

   47 procedure_header: PROCEDURE . IDENTIFIER
   48                 | PROCEDURE . IDENTIFIER LPAR form_par RPAR

    IDENTIFIER  shift, and go to state 36


State 12

   49 function_header: FUNCTION . IDENTIFIER COLON IDENTIFIER
   50                | FUNCTION . IDENTIFIER LPAR form_par RPAR COLON IDENTIFIER

    IDENTIFIER  shift, and go to state 37


State 13

    1 mlaskal: PROGRAM IDENTIFIER SEMICOLON block_P . DOT

    DOT  shift, and go to state 38


State 14

    2 block_P: start_block . const_block
    5 const_block: . CONST C2 type_block
    6            | . type_block
    7 type_block: . TYPE C3 var_block
    8           | . var_block
    9 var_block: . VAR C5 procedure_block
   10          | . procedure_block
   11 procedure_block: . end_block
   12                | . C7 end_block
   13 end_block: . BEGIN state_cycle END
   35 C7: . procedure_header SEMICOLON block SEMICOLON
   36   | . function_header SEMICOLON block SEMICOLON
   37   | . C7 procedure_header SEMICOLON block SEMICOLON
   38   | . C7 function_header SEMICOLON block SEMICOLON
   47 procedure_header: . PROCEDURE IDENTIFIER
   48                 | . PROCEDURE IDENTIFIER LPAR form_par RPAR
   49 function_header: . FUNCTION IDENTIFIER COLON IDENTIFIER
   50                | . FUNCTION IDENTIFIER LPAR form_par RPAR COLON IDENTIFIER

    CONST      shift, and go to state 7
    TYPE       shift, and go to state 8
    VAR        shift, and go to state 9
    BEGIN      shift, and go to state 10
    PROCEDURE  shift, and go to state 11
    FUNCTION   shift, and go to state 12

    const_block       go to state 39
    type_block        go to state 16
    var_block         go to state 17
    procedure_block   go to state 18
    end_block         go to state 19
    C7                go to state 20
    procedure_header  go to state 21
    function_header   go to state 22


State 15

    3 block_P: const_block .

    $default  reduce using rule 3 (block_P)


State 16

    6 const_block: type_block .

    $default  reduce using rule 6 (const_block)


State 17

    8 type_block: var_block .

    $default  reduce using rule 8 (type_block)


State 18

   10 var_block: procedure_block .

    $default  reduce using rule 10 (var_block)


State 19

   11 procedure_block: end_block .

    $default  reduce using rule 11 (procedure_block)


State 20

   12 procedure_block: C7 . end_block
   13 end_block: . BEGIN state_cycle END
   37 C7: C7 . procedure_header SEMICOLON block SEMICOLON
   38   | C7 . function_header SEMICOLON block SEMICOLON
   47 procedure_header: . PROCEDURE IDENTIFIER
   48                 | . PROCEDURE IDENTIFIER LPAR form_par RPAR
   49 function_header: . FUNCTION IDENTIFIER COLON IDENTIFIER
   50                | . FUNCTION IDENTIFIER LPAR form_par RPAR COLON IDENTIFIER

    BEGIN      shift, and go to state 10
    PROCEDURE  shift, and go to state 11
    FUNCTION   shift, and go to state 12

    end_block         go to state 40
    procedure_header  go to state 41
    function_header   go to state 42


State 21

   35 C7: procedure_header . SEMICOLON block SEMICOLON

    SEMICOLON  shift, and go to state 43


State 22

   36 C7: function_header . SEMICOLON block SEMICOLON

    SEMICOLON  shift, and go to state 44


State 23

   14 C1: UINT .

    $default  reduce using rule 14 (C1)


State 24

    4 start_block: LABEL C1 . SEMICOLON
   15 C1: C1 . COMMA UINT

    SEMICOLON  shift, and go to state 45
    COMMA      shift, and go to state 46


State 25

   16 C2: IDENTIFIER . EQ UINT SEMICOLON
   17   | IDENTIFIER . EQ REAL SEMICOLON
   18   | IDENTIFIER . EQ STRING SEMICOLON
   19   | IDENTIFIER . EQ IDENTIFIER SEMICOLON
   20   | IDENTIFIER . EQ OPER_SIGNADD UINT SEMICOLON
   21   | IDENTIFIER . EQ OPER_SIGNADD REAL SEMICOLON
   28   | IDENTIFIER . EQ UINT

    EQ  shift, and go to state 47


State 26

    5 const_block: CONST C2 . type_block
    7 type_block: . TYPE C3 var_block
    8           | . var_block
    9 var_block: . VAR C5 procedure_block
   10          | . procedure_block
   11 procedure_block: . end_block
   12                | . C7 end_block
   13 end_block: . BEGIN state_cycle END
   22 C2: C2 . IDENTIFIER EQ UINT SEMICOLON
   23   | C2 . IDENTIFIER EQ REAL SEMICOLON
   24   | C2 . IDENTIFIER EQ STRING SEMICOLON
   25   | C2 . IDENTIFIER EQ IDENTIFIER SEMICOLON
   26   | C2 . IDENTIFIER EQ OPER_SIGNADD UINT SEMICOLON
   27   | C2 . IDENTIFIER EQ OPER_SIGNADD REAL SEMICOLON
   35 C7: . procedure_header SEMICOLON block SEMICOLON
   36   | . function_header SEMICOLON block SEMICOLON
   37   | . C7 procedure_header SEMICOLON block SEMICOLON
   38   | . C7 function_header SEMICOLON block SEMICOLON
   47 procedure_header: . PROCEDURE IDENTIFIER
   48                 | . PROCEDURE IDENTIFIER LPAR form_par RPAR
   49 function_header: . FUNCTION IDENTIFIER COLON IDENTIFIER
   50                | . FUNCTION IDENTIFIER LPAR form_par RPAR COLON IDENTIFIER

    TYPE        shift, and go to state 8
    VAR         shift, and go to state 9
    BEGIN       shift, and go to state 10
    PROCEDURE   shift, and go to state 11
    FUNCTION    shift, and go to state 12
    IDENTIFIER  shift, and go to state 48

    type_block        go to state 49
    var_block         go to state 17
    procedure_block   go to state 18
    end_block         go to state 19
    C7                go to state 20
    procedure_header  go to state 21
    function_header   go to state 22


State 27

   29 C3: IDENTIFIER . EQ type SEMICOLON

    EQ  shift, and go to state 50


State 28

    7 type_block: TYPE C3 . var_block
    9 var_block: . VAR C5 procedure_block
   10          | . procedure_block
   11 procedure_block: . end_block
   12                | . C7 end_block
   13 end_block: . BEGIN state_cycle END
   30 C3: C3 . IDENTIFIER EQ type SEMICOLON
   35 C7: . procedure_header SEMICOLON block SEMICOLON
   36   | . function_header SEMICOLON block SEMICOLON
   37   | . C7 procedure_header SEMICOLON block SEMICOLON
   38   | . C7 function_header SEMICOLON block SEMICOLON
   47 procedure_header: . PROCEDURE IDENTIFIER
   48                 | . PROCEDURE IDENTIFIER LPAR form_par RPAR
   49 function_header: . FUNCTION IDENTIFIER COLON IDENTIFIER
   50                | . FUNCTION IDENTIFIER LPAR form_par RPAR COLON IDENTIFIER

    VAR         shift, and go to state 9
    BEGIN       shift, and go to state 10
    PROCEDURE   shift, and go to state 11
    FUNCTION    shift, and go to state 12
    IDENTIFIER  shift, and go to state 51

    var_block         go to state 52
    procedure_block   go to state 18
    end_block         go to state 19
    C7                go to state 20
    procedure_header  go to state 21
    function_header   go to state 22


State 29

   31 C4: IDENTIFIER .

    $default  reduce using rule 31 (C4)


State 30

   32 C4: C4 . COMMA IDENTIFIER
   33 C5: C4 . COLON type SEMICOLON

    COMMA  shift, and go to state 53
    COLON  shift, and go to state 54


State 31

    9 var_block: VAR C5 . procedure_block
   11 procedure_block: . end_block
   12                | . C7 end_block
   13 end_block: . BEGIN state_cycle END
   31 C4: . IDENTIFIER
   32   | . C4 COMMA IDENTIFIER
   34 C5: C5 . C4 COLON type SEMICOLON
   35 C7: . procedure_header SEMICOLON block SEMICOLON
   36   | . function_header SEMICOLON block SEMICOLON
   37   | . C7 procedure_header SEMICOLON block SEMICOLON
   38   | . C7 function_header SEMICOLON block SEMICOLON
   47 procedure_header: . PROCEDURE IDENTIFIER
   48                 | . PROCEDURE IDENTIFIER LPAR form_par RPAR
   49 function_header: . FUNCTION IDENTIFIER COLON IDENTIFIER
   50                | . FUNCTION IDENTIFIER LPAR form_par RPAR COLON IDENTIFIER

    BEGIN       shift, and go to state 10
    PROCEDURE   shift, and go to state 11
    FUNCTION    shift, and go to state 12
    IDENTIFIER  shift, and go to state 29

    procedure_block   go to state 55
    end_block         go to state 19
    C4                go to state 56
    C7                go to state 20
    procedure_header  go to state 21
    function_header   go to state 22


State 32

   85 D0: UINT . COLON

    COLON  shift, and go to state 57


State 33

   87 state_cycle: statement .

    $default  reduce using rule 87 (state_cycle)


State 34

   65 statement: D0 . variable ASSIGN expression
   66          | D0 . IDENTIFIER
   67          | D0 . IDENTIFIER LPAR real_par RPAR
   68          | D0 . GOTO UINT
   69          | D0 . BEGIN state_cycle END
   70          | D0 . IF expression THEN statement
   71          | D0 . IF expression THEN statement2 ELSE statement
   72          | D0 . WHILE expression DO statement
   73          | D0 . REPEAT state_cycle UNTIL expression
   74          | D0 . FOR IDENTIFIER ASSIGN expression FOR_DIRECTION expression DO statement
   89 variable: . variable LSBRA ord_expr_cylc RSBRA
   90         | . IDENTIFIER

    BEGIN       shift, and go to state 58
    GOTO        shift, and go to state 59
    IF          shift, and go to state 60
    WHILE       shift, and go to state 61
    REPEAT      shift, and go to state 62
    FOR         shift, and go to state 63
    IDENTIFIER  shift, and go to state 64

    variable  go to state 65


State 35

   13 end_block: BEGIN state_cycle . END
   88 state_cycle: state_cycle . SEMICOLON statement

    END        shift, and go to state 66
    SEMICOLON  shift, and go to state 67


State 36

   47 procedure_header: PROCEDURE IDENTIFIER .  [SEMICOLON]
   48                 | PROCEDURE IDENTIFIER . LPAR form_par RPAR

    LPAR  shift, and go to state 68

    $default  reduce using rule 47 (procedure_header)


State 37

   49 function_header: FUNCTION IDENTIFIER . COLON IDENTIFIER
   50                | FUNCTION IDENTIFIER . LPAR form_par RPAR COLON IDENTIFIER

    COLON  shift, and go to state 69
    LPAR   shift, and go to state 70


State 38
